{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 96,
  "lineage": "88a318eb-f893-62c0-8707-be5b01065778",
  "resources": [
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:route-table/rtb-02daa4943a6bc437a",
            "id": "rtb-02daa4943a6bc437a",
            "owner_id": "154309361967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fastcampus_hyunseo-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04387ab9769910052",
            "route_table_id": "rtb-02daa4943a6bc437a",
            "subnet_id": "subnet-06fa5ea123b6bf22e"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b681c2f859e13e9",
            "route_table_id": "rtb-02daa4943a6bc437a",
            "subnet_id": "subnet-0797ecab53c279deb"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0216e081675490667",
            "id": "r-rtb-0a181d57b3d828bbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a181d57b3d828bbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:route-table/rtb-0a181d57b3d828bbd",
            "id": "rtb-0a181d57b3d828bbd",
            "owner_id": "154309361967",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0216e081675490667",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fastcampus_hyunseo-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc022d0feafefba7",
            "route_table_id": "rtb-0a181d57b3d828bbd",
            "subnet_id": "subnet-033a5f74d0b7fefc9"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b9e2cb8c9537c4b",
            "route_table_id": "rtb-0a181d57b3d828bbd",
            "subnet_id": "subnet-08439011a96ea9f0f"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastcampus_hyunseo-private-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-06fa5ea123b6bf22e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa5ea123b6bf22e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastcampus_hyunseo-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "fastcampus_hyunseo-private-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-0797ecab53c279deb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0797ecab53c279deb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastcampus_hyunseo-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastcampus_hyunseo-public-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-033a5f74d0b7fefc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033a5f74d0b7fefc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastcampus_hyunseo-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "fastcampus_hyunseo-public-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-08439011a96ea9f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08439011a96ea9f0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastcampus_hyunseo-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "fastcampus_hyunseo-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:internet-gateway/igw-0216e081675490667",
            "id": "igw-0216e081675490667",
            "owner_id": "154309361967",
            "tags": {
              "Name": "fastcampus_hyunseo",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "fastcampus_hyunseo",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "fastcampus_hyunseo",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-04bf69f0d42ba83fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:vpc/vpc-04bf69f0d42ba83fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a4645a42500c5fa",
            "default_route_table_id": "rtb-058eef5c4b5fc349d",
            "default_security_group_id": "sg-08df4f6d3a9ac388f",
            "dhcp_options_id": "dopt-04ded84d2124c7a58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04bf69f0d42ba83fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058eef5c4b5fc349d",
            "owner_id": "154309361967",
            "tags": {
              "Name": "fastcampus_hyunseo",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "fastcampus_hyunseo",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "fastcampus_hyunseo",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "fastcampus_hyunseo",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            }
          }
        }
      ]
    }
  ]
}